Fix gift buttons setting alignment

--- a/src/modules/_required/settings.css
+++ b/src/modules/_required/settings.css
@@ -10,6 +10,7 @@
 #mh-utils-settings-mousehunt-improved-send-supplies-pinned-items,
 #mh-utils-settings-feature-modules-quick-send-supplies-items,
 #mh-utils-settings-feature-modules-gift-buttons-send-order,
+#mh-utils-settings-feature-modules-gift-buttons-ignore-bad-gifts,
 #mh-utils-settings-mousehunt-improved-better-travel-reminders {
   max-width: 670px;
   margin-left: 30px;
@@ -20,6 +21,7 @@
 #mh-utils-settings-mousehunt-improved-send-supplies-pinned-items .name,
 #mh-utils-settings-feature-modules-quick-send-supplies-items .name,
 #mh-utils-settings-feature-modules-gift-buttons-send-order .name,
+#mh-utils-settings-feature-modules-gift-buttons-ignore-bad-gifts .name,
 #mh-utils-settings-mousehunt-improved-better-travel-reminders .name {
   font-size: 12px;
 }
@@ -35,7 +37,8 @@
 }
 
 #mh-utils-settings-ui-modules-better-travel-default-tab .inputBox.multiSelect,
-#mh-utils-settings-feature-modules-gift-buttons-send-order .inputBox.multiSelect {
+#mh-utils-settings-feature-modules-gift-buttons-send-order .inputBox.multiSelect,
+#mh-utils-settings-feature-modules-gift-buttons-ignore-bad-gifts .inputBox.multiSelect {
   max-width: unset;
 }
 
